[package]
name = "async-await-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
tokio = { version = "1.9.0", features = ["full"] }
error-chain = "0.12.4"